--- a/Untitled12.ipynb
+++ b/Untitled12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcZI1AFW+26o4VqsFD1eav",
+      "authorship_tag": "ABX9TyMeCvmHJZDKTVlDwF5IbDnN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1810,6 +1810,30 @@
       },
       "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import glob, os\n",
+        "print(\"\\n\".join(glob.glob(\"/content/**/*.ipynb\", recursive=True)))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "64HLThbgOmEo",
+        "outputId": "e31b6148-1f48-475c-8ada-cca7d2328de3"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
