--- a/Untitled12.ipynb
+++ b/Untitled12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMeCvmHJZDKTVlDwF5IbDnN",
+      "authorship_tag": "ABX9TyM9VT08TexxFZVoF/8M2LaU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1831,6 +1831,48 @@
           "name": "stdout",
           "text": [
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nbformat as nbf, os\n",
+        "nb_path  = \"/content/drive/MyDrive/Colab Notebooks/Untitled12.ipynb\"\n",
+        "out_path = nb_path.replace(\".ipynb\", \"_clean.ipynb\")\n",
+        "\n",
+        "nb = nbf.read(nb_path, as_version=4)\n",
+        "key = \"application/vnd.jupyter.widget-state+json\"\n",
+        "widgets = nb.metadata.get(\"widgets\", {})\n",
+        "app = widgets.get(key, {})\n",
+        "app.setdefault(\"state\", {})          # <- o que o GitHub exige\n",
+        "app.setdefault(\"version_major\", 2)\n",
+        "app.setdefault(\"version_minor\", 0)\n",
+        "widgets[key] = app\n",
+        "nb.metadata[\"widgets\"] = widgets\n",
+        "\n",
+        "# limpa widgets quebrados nas células\n",
+        "for c in nb.cells:\n",
+        "    c.metadata.pop(\"widgets\", None)\n",
+        "\n",
+        "nbf.write(nb, out_path)\n",
+        "print(\"[OK] widgets.state adicionado:\", out_path)\n"
+      ],
+      "metadata": {
+        "id": "4b5AzSPNSRaA",
+        "outputId": "0bc27099-bb73-4632-9840-cc111cb9dba5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[OK] widgets.state adicionado: /content/drive/MyDrive/Colab Notebooks/Untitled12_clean.ipynb\n"
           ]
         }
       ]
