--- a/Untitled12.ipynb
+++ b/Untitled12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9VT08TexxFZVoF/8M2LaU",
+      "authorship_tag": "ABX9TyONL8rZGLuAOVPb/B+ccQDQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1838,44 +1838,109 @@
     {
       "cell_type": "code",
       "source": [
-        "import nbformat as nbf, os\n",
-        "nb_path  = \"/content/drive/MyDrive/Colab Notebooks/Untitled12.ipynb\"\n",
-        "out_path = nb_path.replace(\".ipynb\", \"_clean.ipynb\")\n",
+        "import nbformat as nbf, os, json\n",
+        "from nbformat.validator import validate, ValidationError\n",
         "\n",
-        "nb = nbf.read(nb_path, as_version=4)\n",
-        "key = \"application/vnd.jupyter.widget-state+json\"\n",
-        "widgets = nb.metadata.get(\"widgets\", {})\n",
-        "app = widgets.get(key, {})\n",
-        "app.setdefault(\"state\", {})          # <- o que o GitHub exige\n",
-        "app.setdefault(\"version_major\", 2)\n",
-        "app.setdefault(\"version_minor\", 0)\n",
-        "widgets[key] = app\n",
-        "nb.metadata[\"widgets\"] = widgets\n",
+        "NB_PATH  = \"/content/drive/MyDrive/Colab Notebooks/Untitled12.ipynb\"  # <-- caminho correto\n",
+        "OUT_PATH = NB_PATH.replace(\".ipynb\", \"_clean.ipynb\")\n",
         "\n",
-        "# limpa widgets quebrados nas células\n",
+        "nb = nbf.read(NB_PATH, as_version=4)\n",
+        "\n",
+        "# Preserve apenas kernelspec/language_info (evita metadados sujos)\n",
+        "kernelspec     = nb.metadata.get(\"kernelspec\", {})\n",
+        "language_info  = nb.metadata.get(\"language_info\", {})\n",
+        "nb.metadata    = {}\n",
+        "if kernelspec:    nb.metadata[\"kernelspec\"]    = kernelspec\n",
+        "if language_info: nb.metadata[\"language_info\"] = language_info\n",
+        "\n",
+        "# Limpeza profunda por célula\n",
         "for c in nb.cells:\n",
+        "    # remove qualquer metadado de widgets\n",
         "    c.metadata.pop(\"widgets\", None)\n",
         "\n",
-        "nbf.write(nb, out_path)\n",
-        "print(\"[OK] widgets.state adicionado:\", out_path)\n"
+        "    # limpa outputs (remove views de widget e quaisquer saídas)\n",
+        "    if \"outputs\" in c:\n",
+        "        c[\"outputs\"] = []\n",
+        "\n",
+        "    # zera contador de execução\n",
+        "    c[\"execution_count\"] = None\n",
+        "\n",
+        "# Garanta que NÃO há 'widgets' na raiz\n",
+        "nb.metadata.pop(\"widgets\", None)\n",
+        "\n",
+        "# Valida antes de salvar\n",
+        "try:\n",
+        "    validate(nb)\n",
+        "except ValidationError as e:\n",
+        "    print(\"Antes de salvar: validação falhou ->\", e)\n",
+        "\n",
+        "nbf.write(nb, OUT_PATH)\n",
+        "print(\"[OK] gravado:\", OUT_PATH, \"| tamanho:\", os.path.getsize(OUT_PATH)/1024, \"KB\")\n",
+        "\n",
+        "# Verificador: procura indícios de widgets no JSON já salvo\n",
+        "raw = open(OUT_PATH, \"r\", encoding=\"utf-8\").read()\n",
+        "flags = [\n",
+        "    '\"application/vnd.jupyter.widget-view+json\"',\n",
+        "    '\"application/vnd.jupyter.widget-state+json\"',\n",
+        "    '\"widgets\"'\n",
+        "]\n",
+        "print(\"\\nChecagens (deve dar 0 para as 3):\")\n",
+        "for f in flags:\n",
+        "    print(f, raw.count(f))\n",
+        "\n",
+        "# Teste de conversão para HTML (se passar, o GitHub normalmente renderiza)\n",
+        "!jupyter nbconvert --to html \"$OUT_PATH\" --output \"/content/_check_render.html\" >/dev/null 2>&1 || true\n",
+        "print(\"\\nnbconvert: OK (se não imprimiu erro acima). HTML de teste em /content/_check_render.html\")\n"
       ],
       "metadata": {
-        "id": "4b5AzSPNSRaA",
-        "outputId": "0bc27099-bb73-4632-9840-cc111cb9dba5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FaPHJfHJSyVe",
+        "outputId": "9c8fd567-6339-46ce-e7b3-9ad67bae28db"
       },
-      "execution_count": 39,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[OK] widgets.state adicionado: /content/drive/MyDrive/Colab Notebooks/Untitled12_clean.ipynb\n"
+            "[OK] gravado: /content/drive/MyDrive/Colab Notebooks/Untitled12_clean.ipynb | tamanho: 35.365234375 KB\n",
+            "\n",
+            "Checagens (deve dar 0 para as 3):\n",
+            "\"application/vnd.jupyter.widget-view+json\" 0\n",
+            "\"application/vnd.jupyter.widget-state+json\" 0\n",
+            "\"widgets\" 0\n",
+            "\n",
+            "nbconvert: OK (se não imprimiu erro acima). HTML de teste em /content/_check_render.html\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json, re\n",
+        "with open(OUT_PATH, \"r\", encoding=\"utf-8\") as f:\n",
+        "    data = json.load(f)\n",
+        "\n",
+        "def find_widgets(obj, path=\"$\"):\n",
+        "    if isinstance(obj, dict):\n",
+        "        for k,v in obj.items():\n",
+        "            if k == \"widgets\":\n",
+        "                print(\"Encontrado 'widgets' em\", path)\n",
+        "            find_widgets(v, f\"{path}.{k}\")\n",
+        "    elif isinstance(obj, list):\n",
+        "        for i,v in enumerate(obj):\n",
+        "            find_widgets(v, f\"{path}[{i}]\")\n",
+        "\n",
+        "find_widgets(data)\n"
+      ],
+      "metadata": {
+        "id": "9dWKeTEbTASc"
+      },
+      "execution_count": 41,
+      "outputs": []
     }
   ]
 }
