--- a/Untitled12.ipynb
+++ b/Untitled12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONL8rZGLuAOVPb/B+ccQDQ",
+      "authorship_tag": "ABX9TyOosZZYVpzJzF5NNKuZrht2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1838,81 +1838,24 @@
     {
       "cell_type": "code",
       "source": [
-        "import nbformat as nbf, os, json\n",
-        "from nbformat.validator import validate, ValidationError\n",
-        "\n",
-        "NB_PATH  = \"/content/drive/MyDrive/Colab Notebooks/Untitled12.ipynb\"  # <-- caminho correto\n",
-        "OUT_PATH = NB_PATH.replace(\".ipynb\", \"_clean.ipynb\")\n",
-        "\n",
-        "nb = nbf.read(NB_PATH, as_version=4)\n",
-        "\n",
-        "# Preserve apenas kernelspec/language_info (evita metadados sujos)\n",
-        "kernelspec     = nb.metadata.get(\"kernelspec\", {})\n",
-        "language_info  = nb.metadata.get(\"language_info\", {})\n",
-        "nb.metadata    = {}\n",
-        "if kernelspec:    nb.metadata[\"kernelspec\"]    = kernelspec\n",
-        "if language_info: nb.metadata[\"language_info\"] = language_info\n",
-        "\n",
-        "# Limpeza profunda por célula\n",
-        "for c in nb.cells:\n",
-        "    # remove qualquer metadado de widgets\n",
-        "    c.metadata.pop(\"widgets\", None)\n",
-        "\n",
-        "    # limpa outputs (remove views de widget e quaisquer saídas)\n",
-        "    if \"outputs\" in c:\n",
-        "        c[\"outputs\"] = []\n",
-        "\n",
-        "    # zera contador de execução\n",
-        "    c[\"execution_count\"] = None\n",
-        "\n",
-        "# Garanta que NÃO há 'widgets' na raiz\n",
-        "nb.metadata.pop(\"widgets\", None)\n",
-        "\n",
-        "# Valida antes de salvar\n",
-        "try:\n",
-        "    validate(nb)\n",
-        "except ValidationError as e:\n",
-        "    print(\"Antes de salvar: validação falhou ->\", e)\n",
-        "\n",
-        "nbf.write(nb, OUT_PATH)\n",
-        "print(\"[OK] gravado:\", OUT_PATH, \"| tamanho:\", os.path.getsize(OUT_PATH)/1024, \"KB\")\n",
-        "\n",
-        "# Verificador: procura indícios de widgets no JSON já salvo\n",
-        "raw = open(OUT_PATH, \"r\", encoding=\"utf-8\").read()\n",
-        "flags = [\n",
-        "    '\"application/vnd.jupyter.widget-view+json\"',\n",
-        "    '\"application/vnd.jupyter.widget-state+json\"',\n",
-        "    '\"widgets\"'\n",
-        "]\n",
-        "print(\"\\nChecagens (deve dar 0 para as 3):\")\n",
-        "for f in flags:\n",
-        "    print(f, raw.count(f))\n",
-        "\n",
-        "# Teste de conversão para HTML (se passar, o GitHub normalmente renderiza)\n",
-        "!jupyter nbconvert --to html \"$OUT_PATH\" --output \"/content/_check_render.html\" >/dev/null 2>&1 || true\n",
-        "print(\"\\nnbconvert: OK (se não imprimiu erro acima). HTML de teste em /content/_check_render.html\")\n"
+        "# 1) Monte o Drive se ainda não\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n"
       ],
       "metadata": {
+        "id": "B-7EVipXTs9L",
+        "outputId": "80f73f33-5027-416e-e118-908d2e63bbdf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "FaPHJfHJSyVe",
-        "outputId": "9c8fd567-6339-46ce-e7b3-9ad67bae28db"
+        }
       },
-      "execution_count": 40,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[OK] gravado: /content/drive/MyDrive/Colab Notebooks/Untitled12_clean.ipynb | tamanho: 35.365234375 KB\n",
-            "\n",
-            "Checagens (deve dar 0 para as 3):\n",
-            "\"application/vnd.jupyter.widget-view+json\" 0\n",
-            "\"application/vnd.jupyter.widget-state+json\" 0\n",
-            "\"widgets\" 0\n",
-            "\n",
-            "nbconvert: OK (se não imprimiu erro acima). HTML de teste em /content/_check_render.html\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -1920,27 +1863,99 @@
     {
       "cell_type": "code",
       "source": [
-        "import json, re\n",
-        "with open(OUT_PATH, \"r\", encoding=\"utf-8\") as f:\n",
-        "    data = json.load(f)\n",
+        "# 2) Sanear IN-PLACE (com backup) — roda uma vez\n",
+        "import nbformat as nbf, os, json, shutil\n",
+        "from nbformat.validator import validate, ValidationError\n",
+        "from pathlib import Path\n",
+        "import subprocess, sys\n",
         "\n",
-        "def find_widgets(obj, path=\"$\"):\n",
-        "    if isinstance(obj, dict):\n",
-        "        for k,v in obj.items():\n",
-        "            if k == \"widgets\":\n",
-        "                print(\"Encontrado 'widgets' em\", path)\n",
-        "            find_widgets(v, f\"{path}.{k}\")\n",
-        "    elif isinstance(obj, list):\n",
-        "        for i,v in enumerate(obj):\n",
-        "            find_widgets(v, f\"{path}[{i}]\")\n",
+        "NB_PATH = \"/content/drive/MyDrive/Colab Notebooks/Untitled12.ipynb\"  # <-- AJUSTE se for outro\n",
+        "NB_PATH = str(Path(NB_PATH))  # normaliza\n",
+        "BAK_PATH = NB_PATH + \".bak\"\n",
         "\n",
-        "find_widgets(data)\n"
+        "# backup\n",
+        "if not os.path.exists(BAK_PATH):\n",
+        "    shutil.copy2(NB_PATH, BAK_PATH)\n",
+        "    print(\"[BK] Backup criado:\", BAK_PATH)\n",
+        "\n",
+        "# lê\n",
+        "nb = nbf.read(NB_PATH, as_version=4)\n",
+        "\n",
+        "# preserva apenas kernelspec / language_info\n",
+        "kernelspec    = nb.metadata.get(\"kernelspec\", {})\n",
+        "language_info = nb.metadata.get(\"language_info\", {})\n",
+        "nb.metadata   = {}\n",
+        "if kernelspec:    nb.metadata[\"kernelspec\"]    = kernelspec\n",
+        "if language_info: nb.metadata[\"language_info\"] = language_info\n",
+        "\n",
+        "# limpa células\n",
+        "for c in nb.cells:\n",
+        "    # remove qualquer metadado 'widgets'\n",
+        "    c.metadata.pop(\"widgets\", None)\n",
+        "    # zera outputs e contador\n",
+        "    if \"outputs\" in c: c[\"outputs\"] = []\n",
+        "    c[\"execution_count\"] = None\n",
+        "\n",
+        "# garante ausência na raiz\n",
+        "nb.metadata.pop(\"widgets\", None)\n",
+        "\n",
+        "# valida e grava\n",
+        "try:\n",
+        "    validate(nb)\n",
+        "except ValidationError as e:\n",
+        "    print(\"[WARN] validação pré-gravação:\", e)\n",
+        "\n",
+        "nbf.write(nb, NB_PATH)\n",
+        "print(\"[OK] Notebook saneado:\", NB_PATH, \"| tamanho:\", round(os.path.getsize(NB_PATH)/1024,1), \"KB\")\n",
+        "\n",
+        "# verificação textual\n",
+        "raw = open(NB_PATH, \"r\", encoding=\"utf-8\").read()\n",
+        "flags = [\n",
+        "    '\"application/vnd.jupyter.widget-view+json\"',\n",
+        "    '\"application/vnd.jupyter.widget-state+json\"',\n",
+        "    '\"widgets\"'\n",
+        "]\n",
+        "print(\"\\n[CHK] Ocorrências (devem ser 0 para as 3 linhas abaixo):\")\n",
+        "for f in flags:\n",
+        "    print(f\"{f}: {raw.count(f)}\")\n",
+        "\n",
+        "# teste nbconvert -> HTML (se falhar, imprime stderr)\n",
+        "result = subprocess.run(\n",
+        "    [\"jupyter\", \"nbconvert\", \"--to\", \"html\", NB_PATH, \"--output\", \"/content/_render_test.html\"],\n",
+        "    capture_output=True, text=True\n",
+        ")\n",
+        "print(\"\\n[nbconvert status]:\", result.returncode)\n",
+        "if result.returncode != 0:\n",
+        "    print(result.stderr[:800])\n",
+        "else:\n",
+        "    print(\"Render HTML OK: /content/_render_test.html\")\n"
       ],
       "metadata": {
-        "id": "9dWKeTEbTASc"
+        "id": "lTa5jZA6Txsm",
+        "outputId": "110294ae-aede-4ab9-9f30-15cf54a56626",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 41,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[BK] Backup criado: /content/drive/MyDrive/Colab Notebooks/Untitled12.ipynb.bak\n",
+            "[OK] Notebook saneado: /content/drive/MyDrive/Colab Notebooks/Untitled12.ipynb | tamanho: 35.4 KB\n",
+            "\n",
+            "[CHK] Ocorrências (devem ser 0 para as 3 linhas abaixo):\n",
+            "\"application/vnd.jupyter.widget-view+json\": 0\n",
+            "\"application/vnd.jupyter.widget-state+json\": 0\n",
+            "\"widgets\": 0\n",
+            "\n",
+            "[nbconvert status]: 0\n",
+            "Render HTML OK: /content/_render_test.html\n"
+          ]
+        }
+      ]
     }
   ]
 }
